--- a/style.css
+++ b/style.css
@@ -37,19 +37,33 @@ body {
 
 header {
     width: 100%;
-    height: 6rem;
+    height: 7em;
     position: absolute;
     display: flex;
     justify-content: center;
     align-items: center;
     font-weight: bolder;
+    transition: all 0s;
+}
+
+@keyframes show {
+    from { top: -20px; opacity: 0;}
+    to   { top: 0px; opacity: 1;}
+  }
+
+header.showed {
+    animation: .2s ease-in show;
+    position: fixed;
+    top: 0px;
+    height: 4em;
+    background-color: var(--main);
 }
 
 .logo {
     font-size: xx-large;
     font-weight: 700;
     position: absolute;
-    left: 2rem;
+    left: 2em;
 }
 
 .logo:hover {
@@ -78,7 +92,7 @@ nav:has(.nav:hover) > .nav {
 }
 
 .header-space {
-    height: 4rem;
+    height: 5em;
 }
 
 section.white {
@@ -111,6 +125,6 @@ footer {
 }
 
 .copyright div {
-    font-size: .94rem;
+    font-size: .94em;
     font-family: -apple-system, BlinkMacSystemFont, Roboto, "segoe ui", Helvetica, Arial, sans-serif, "apple color emoji", "segoe ui emoji", "segoe ui symbol";
 }
