--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+@import url("header.css");
+@import url("footer.css");
+
 :root {
     --main: #ffffff;
     --main-2: #f7f7f7;
@@ -9,7 +12,11 @@
 }
 
 ::selection {
-    background-color: #fcb3bf;
+    background-color: #ffcfd7;
+}
+
+::-moz-selection {
+    background-color: #ffcfd7;
 }
 
 * {
@@ -37,127 +44,6 @@ body {
     color: var(--complementary);
 }
 
-/* --------------- HEADER --------------- */
-
-header {
-    width: 100%;
-    height: 7em;
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-weight: bolder;
-    transition: all 0s;
-}
-
-@keyframes show {
-    from {
-        top: -20px;
-        opacity: 0;
-    }
-
-    to {
-        top: 0px;
-        opacity: 1;
-    }
-}
-
-header.showed {
-    animation: 0.3s ease show;
-    position: fixed;
-    top: 0px;
-    height: 4em;
-    background-color: var(--main);
-}
-
-.logo {
-    font-size: xx-large;
-    font-weight: 700;
-    position: absolute;
-    left: 2em;
-}
-
-.logo:hover {
-    opacity: 0.8;
-}
-
-
-.nav-links {
-    display: flex;
-    cursor: pointer;
-}
-
-.nav-links li {
-    display: inline-flex;
-    list-style: none;
-}
-
-.nav-links .drop-menu {
-    position: absolute;
-    background: var(--main);
-    border-radius: 5px;
-    width: min-content;
-    line-height: 3em;
-    top: 4em;
-    opacity: 0;
-    visibility: hidden;
-    padding: 0.5em 0;
-    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.3);
-}
-
-.nav-links li:hover .drop-menu {
-    transition: all 0.3s ease;
-    top: 5.6em;
-    opacity: 1;
-    visibility: visible;
-}
-
-header.showed .nav-links li:hover .drop-menu {
-    top: 3.5em;
-}
-
-.drop-menu li {
-    width: 100%;
-    padding: 0;
-}
-
-.drop-menu li a {
-    padding: 0 1.5em;
-    display: block;
-    font-size: large;
-    font-weight: 800;
-    border-radius: 0px;
-    width: max-content;
-}
-
-.drop-menu li:hover {
-    transition: all 0.2s;
-    background-color: var(--complementary-2);
-}
-
-nav:has(li:hover> a) > ul > li > a{
-    opacity: 0.6;
-}
-
-nav li>a {
-    font-family: "Bebas Neue", sans-serif;
-    font-stretch: extra-condensed;
-    font-weight: 800;
-    font-size: 21px;
-    padding: 1em 1.25em;
-}
-
-nav li:hover > a {
-    opacity: 1 !important;
-}
-
-nav li > a:hover {
-    color: var(--complementary);
-}
-
-.header-space {
-    height: 5em;
-}
 
 /* --------------- SECTIONS --------------- */
 
@@ -169,31 +55,4 @@ section.white {
 section.gray {
     background-color: var(--main-2);
     padding: 2em 0;
-}
-
-/* --------------- FOOTER --------------- */
-
-footer {
-    width: 100%;
-    background-color: var(--main-2);
-}
-
-.sponsor {
-    padding: 64px 0;
-    columns: 3 300px;
-    gap: 1em;
-    text-align: center;
-}
-
-.copyright {
-    display: flex;
-    justify-content: space-between;
-    padding: 1.5em 0;
-    border-top: solid 1px var(--main-3);
-}
-
-.copyright div {
-    font-size: 0.94em;
-    font-family: -apple-system, BlinkMacSystemFont, Roboto, "segoe ui", Helvetica,
-        Arial, sans-serif, "apple color emoji", "segoe ui emoji", "segoe ui symbol";
 }
