--- a/header.css
+++ b/header.css
@@ -1,9 +1,5 @@
 /* --------------- HEADER --------------- */
 
-:root {
-    --a: 5;
-}
-
 header {
     width: 100%;
     height: 7em;
@@ -13,6 +9,7 @@ header {
     align-items: center;
     font-weight: bolder;
     transition: all 0s;
+    user-select: none;
 }
 
 @keyframes show {
@@ -44,6 +41,26 @@ header.showed {
 
 .logo:hover {
     opacity: 0.8;
+}
+
+nav:has(li:hover> a) > ul > li > a{
+    opacity: 0.6;
+}
+
+nav li>a {
+    font-family: "Bebas Neue", sans-serif;
+    font-stretch: extra-condensed;
+    font-weight: 800;
+    font-size: 21px;
+    padding: 1em 1.25em;
+}
+
+nav li:hover > a {
+    opacity: 1 !important;
+}
+
+nav li > a:hover {
+    color: var(--complementary);
 }
 
 .nav-links {
@@ -87,6 +104,12 @@ header.showed .nav-links li:hover .drop-menu {
 .drop-menu li {
     width: 100%;
     padding: 0;
+    transition: background-color .2s;
+}
+
+.drop-menu li:hover {
+    background-color: var(--complementary-2);
+    color: var(--complementary);
 }
 
 .drop-menu li a {
@@ -96,31 +119,6 @@ header.showed .nav-links li:hover .drop-menu {
     font-weight: 800;
     border-radius: 0px;
     width: max-content;
-}
-
-.drop-menu li:hover {
-    transition: all 0.2s;
-    background-color: var(--complementary-2);
-}
-
-nav:has(li:hover> a) > ul > li > a{
-    opacity: 0.6;
-}
-
-nav li>a {
-    font-family: "Bebas Neue", sans-serif;
-    font-stretch: extra-condensed;
-    font-weight: 800;
-    font-size: 21px;
-    padding: 1em 1.25em;
-}
-
-nav li:hover > a {
-    opacity: 1 !important;
-}
-
-nav li > a:hover {
-    color: var(--complementary);
 }
 
 .header-space {
