--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@
     transition-property: color, opacity;
     transition-duration: 0.2s;
     transition-timing-function: ease-in-out;
+    -webkit-tap-highlight-color: transparent;
 }
 
 body {
