--- a/header.css
+++ b/header.css
@@ -4,8 +4,6 @@ header {
     width: 100%;
     height: 7em;
     position: absolute;
-    display: flex;
-    justify-content: center;
     align-items: center;
     font-weight: bolder;
     transition: all 0s;
@@ -32,11 +30,17 @@ header.showed {
     background-color: var(--main);
 }
 
+nav {
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    margin: 0 2em 0 4em;
+    align-items: center;
+}
+
 .logo {
     font-size: xx-large;
     font-weight: 700;
-    position: absolute;
-    left: 2em;
 }
 
 .logo:hover {
@@ -71,6 +75,7 @@ nav li > a:hover {
 .nav-links li {
     display: inline-flex;
     list-style: none;
+    position: relative;
 }
 
 .nav-links .drop-menu {
@@ -78,17 +83,23 @@ nav li > a:hover {
     background: var(--main);
     border-radius: 5px;
     width: min-content;
-    line-height: 3em;
-    top: 4em;
+    line-height: 1.5em;
+    top: 3em;
+    left: 0;
     opacity: 0;
     visibility: hidden;
     padding: 0.5em 0;
     box-shadow: 0 6px 10px rgba(0, 0, 0, 0.3);
 }
 
+.nav-links .drop-menu.last {
+    right: 0;
+    left: auto;
+}
+
 .nav-links li:hover .drop-menu {
     transition: all 0.3s ease;
-    top: 5.6em;
+    top: 4em;
     opacity: 1;
     visibility: visible;
 }
@@ -101,10 +112,11 @@ header.showed .nav-links li:hover .drop-menu {
     width: 100%;
     padding: 0;
     transition: background-color .2s;
+    padding: 0.75em 0;
 }
 
 .drop-menu li:hover {
-    background-color: var(--complementary-2);
+    background-color: var(--complementary-3);
     color: var(--complementary);
 }
 
@@ -115,6 +127,8 @@ header.showed .nav-links li:hover .drop-menu {
     font-weight: 800;
     border-radius: 0px;
     width: max-content;
+    max-width: 10em;
+    min-width: 8em;
 }
 
 .header-space {
