--- a/src/assets/css/header.css
+++ b/src/assets/css/header.css
@@ -169,6 +169,10 @@ nav .btn.close-btn {
         height: 5em;
     }
 
+    header.showed {
+        border-radius: 0 0 1em 1em;
+    }
+
     nav {
         margin: 0 2em 0 9.8px;
     }
