--- a/src/assets/css/header.css
+++ b/src/assets/css/header.css
@@ -52,8 +52,8 @@ nav {
     position: fixed;
     top: 0;
     left: 0;
-    height: 100lvh;
-    width: 100lvw;
+    height: 100svh;
+    width: 100svw;
 }
 
 nav:has(li:hover> a)>ul>li>a {
