--- a/src/assets/css/header.css
+++ b/src/assets/css/header.css
@@ -216,7 +216,7 @@ header~* {
 
     nav .nav-links {
         position: fixed;
-        height: 100%;
+        height: 100svh;
         width: calc(100% - 3em);
         max-width: 30em;
         top: 0;
