--- a/src/App.scss
+++ b/src/App.scss
@@ -39,12 +39,6 @@ body {
   overflow: auto;
 }
 
-.container {
-  margin: 0 auto;
-  padding: 0 1.5em;
-  max-width: 1280px;
-}
-
 .complementary {
   color: var(--complementary);
 }
@@ -57,12 +51,20 @@ path {
 
 /* --------------- SECTIONS --------------- */
 
-section.white {
-  background-color: var(--main);
+section {
   padding: 2em 0;
+
+  &.secondary .container {
+    color: var(--main);
+  }
+
+  &.secondary-2 .container {
+    color: var(--main);
+  }
 }
 
-section.gray {
-  background-color: var(--main-2);
-  padding: 2em 0;
+.container {
+  margin: 0 auto;
+  padding: 0 1.5em;
+  max-width: 1280px;
 }
