Add TextDropList and TextDrop

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,8 @@
 :root {
   --main: #ffffff;
-  --main-2: #f7f7f7;
-  --main-3: #e7e7e7;
+  --main-2: #fbfbfb;
+  --main-3: #f7f7f7;
+  --main-4: #e7e7e7;
   --secondary: #102230;
   --secondary-2: #203240;
   --complementary: #b90d0d;
