--- a/src/assets/css/text-drop-list.scss
+++ b/src/assets/css/text-drop-list.scss
@@ -1,71 +1,73 @@
-.text-drop-list {
-    .text-drop {
-        .title {
-            display: flex;
+.text-drop {
+    .title {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 0 0.25em 0 1em;
+        margin: .25em 0;
+        background-color: var(--main-3);
+        border-radius: .5em;
+        height: 3.5em;
+
+        .btn {
             align-items: center;
-            justify-content: space-between;
-            padding: 0 0.25em 0 1em;
-            margin: .25em 0;
-            background-color: var(--main-3);
-            border-radius: .5em;
-            height: 3.5em;
+            height: 3em;
+            width: 3em;
+            border-radius: 1.5em;
 
-            .btn {
-                align-items: center;
-                height: 3em;
-                width: 3em;
-                border-radius: 1.5em;
+            &.open {
+                display: flex;
+            }
 
-                &.open {
-                    display: flex;
+            &.close {
+                display: none;
+            }
+
+            &:hover {
+                background-color: var(--main-4);
+
+                path {
+                    stroke: var(--complementary);
                 }
+            }
 
-                &.close {
+            svg {
+                display: block;
+                margin: 0 auto;
+                height: 40%;
+                width: 40%;
+            }
+        }
+    }
+
+    .text-wrapper {
+        display: grid;
+        grid-template-rows: 0fr;
+        transition: all .5s ease;
+        padding: 0 1em;
+
+        .text {
+            overflow-y: hidden;
+        }
+    }
+
+    &.active {
+        .text-wrapper {
+            grid-template-rows: 1fr;
+            padding: 1em;
+        }
+
+        .title {
+            .btn {
+                &.open {
                     display: none;
                 }
 
-                &:hover {
-                    background-color: var(--main-4);
-                }
-
-                svg {
-                    display: block;
-                    margin: 0 auto;
-                    height: 50%;
-                    width: 50%;
+                &.close {
+                    display: flex;
                 }
             }
-        }
 
-        .text-wrapper {
-            display: grid;
-            grid-template-rows: 0fr;
-            transition: all .5s ease;
-            padding: 0 1em;
-
-            .text {
-                overflow-y: hidden;
-            }
-        }
-
-        &.active {
-            .text-wrapper {
-                grid-template-rows: 1fr;
-                padding: 1em;
-            }
-
-            .title {
-                .btn {
-                    &.open {
-                        display: none;
-                    }
-
-                    &.close {
-                        display: flex;
-                    }
-                }
-
-            }
         }
     }
 }
