--- a/src/App.scss
+++ b/src/App.scss
@@ -40,6 +40,18 @@ body {
     overflow: auto;
 }
 
+h1 {
+    padding: 16px 0;
+    font-size: 2.5em;
+    font-family: "Bebas Neue", sans-serif;
+}
+
+h2 {
+    padding: 16px 0;
+    font-size: .8em;
+    font-weight: 600;
+}
+
 .complementary {
     color: var(--complementary);
 }
@@ -69,4 +81,8 @@ path {
     stroke: var(--secondary);
     stroke-width: 4;
     stroke-linecap: round;
+}
+
+.separator {
+    border-top: solid 1px var(--main-4);
 }
