--- a/src/assets/css/header.scss
+++ b/src/assets/css/header.scss
@@ -1,5 +1,3 @@
-/* --------------- HEADER --------------- */
-
 header {
     width: 100%;
     height: 7em;
@@ -154,6 +152,16 @@ header {
 }
 
 @media screen and (max-width: 970px) {
+    header nav {
+        margin: 0 1em 0 2.5em;
+
+        .nav-links>li>a {
+            padding: .65em;
+        }
+    }
+}
+
+@media screen and (max-width: 768px) {
     @keyframes show {
         from {
             top: -20px;
