--- a/src/assets/css/text-drop-list.scss
+++ b/src/assets/css/text-drop-list.scss
@@ -14,10 +14,21 @@
             height: 3.5em;
             cursor: pointer;
 
+            &:hover {
+                .btn {
+                    background-color: var(--main-3);
+
+                    path {
+                        stroke: var(--complementary);
+                    }
+                }
+            }
+
             .btn {
                 height: 3em;
                 width: 3em;
                 border-radius: 1.5em;
+                transition: all .2s ease;
 
                 &.close {
                     display: none;
