--- a/src/assets/css/footer.scss
+++ b/src/assets/css/footer.scss
@@ -2,10 +2,17 @@ footer {
     background-color: var(--main-2);
 
     .sponsor {
-        padding: 64px 0;
+        padding: 1.5em 0 0 0;
         columns: 3 300px;
-        gap: 1em;
+        gap: 1.5em;
         text-align: center;
+
+        div {
+            background-color: var(--main-3);
+            margin-bottom: 1.5em;
+            padding: 3em 2em;
+            border-radius: .5em;
+        }
     }
 
     .copyright {
