--- a/src/assets/css/section.scss
+++ b/src/assets/css/section.scss
@@ -5,10 +5,22 @@ section {
     &.secondary-2 * {
         color: var(--main);
     }
-}
 
-.container {
-    margin: 0 auto;
-    padding: 0 1.5em;
-    max-width: 1280px;
+    &.background-image {
+        position: relative;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+
+        &::after {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: var(--secondary);
+            opacity: 60%;
+        }
+    }
 }
