--- a/src/assets/css/text-drop-list.scss
+++ b/src/assets/css/text-drop-list.scss
@@ -10,9 +10,11 @@
             justify-content: space-between;
             padding: 0 0.25em 0 1em;
             background-color: var(--main-2);
-            border-radius: .5em;
-            height: 3.5em;
+            border-radius: 8px;
+            height: 2.5em;
             cursor: pointer;
+            font-family: "Bebas Neue", sans-serif;
+            font-size: 20px;
 
             &:hover {
                 .btn {
@@ -25,9 +27,9 @@
             }
 
             .btn {
-                height: 3em;
-                width: 3em;
-                border-radius: 1.5em;
+                height: 2em;
+                width: 2em;
+                border-radius: 1em;
                 transition: all .2s ease;
 
                 &.close {
