--- a/src/assets/css/text-drop-list.scss
+++ b/src/assets/css/text-drop-list.scss
@@ -15,6 +15,8 @@
             cursor: pointer;
             font-family: "Bebas Neue", sans-serif;
             font-size: 20px;
+            white-space: nowrap;
+            overflow: hidden;
 
             &:hover {
                 .btn {
