--- a/src/App.scss
+++ b/src/App.scss
@@ -175,7 +175,7 @@ blockquote:before {
     left: 0;
     height: 40px;
     width: 40px;
-    content: url("images/quote_in.svg");
+    content: url("/images/quote_in.svg");
 }
 
 blockquote:after {
@@ -184,7 +184,7 @@ blockquote:after {
     right: 0;
     height: 40px;
     width: 40px;
-    content: url("images/quote_out.svg");
+    content: url("/images/quote_out.svg");
 }
 
 @media screen and (max-width: 768px) {
