--- a/src/App.scss
+++ b/src/App.scss
@@ -74,7 +74,7 @@ h1 {
 }
 
 h2 {
-    padding: 16px 0;
+    padding: 0 0 16px 0;
     font-size: .8em;
     font-weight: 700;
     color: var(--complementary) !important;
