--- a/src/assets/css/footer.scss
+++ b/src/assets/css/footer.scss
@@ -1,15 +1,15 @@
 footer {
+    padding: 2em 0 1em 0;
     background-color: var(--main-2);
 
     .sponsor {
-        padding: 1.5em 0 0 0;
         columns: 3 300px;
-        gap: 1.5em;
+        gap: 2em;
         text-align: center;
 
         div {
             background-color: var(--main-3);
-            margin-bottom: 1.5em;
+            margin-bottom: 2em;
             padding: 3em 2em;
             border-radius: .5em;
         }
@@ -18,7 +18,7 @@ footer {
     .copyright {
         display: flex;
         justify-content: space-between;
-        padding: 1.5em 0;
+        padding-top: 1em;
     }
 
     .copyright div {
