--- a/src/App.scss
+++ b/src/App.scss
@@ -58,6 +58,10 @@ body {
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
+.padding {
+    padding-top: 16px;
+}
+
 h1 {
     padding: 0 0 16px 0;
     font-size: 2.5em;
@@ -67,10 +71,6 @@ h1 {
     &>span {
         font-family: "Bebas Neue", sans-serif;
     }
-}
-
-.padding {
-    padding-top: 16px;
 }
 
 h2 {
@@ -138,6 +138,10 @@ img {
 
     &.reverse {
         flex-direction: row-reverse
+    }
+
+    &>* {
+        width: 50%;
     }
 }
 
