--- a/src/assets/css/Action.scss
+++ b/src/assets/css/Action.scss
@@ -1,5 +1,14 @@
 .action {
+    min-height: 15em;
     gap: 2em;
+
+    &> :first-child {
+        width: 70%;
+    }
+
+    &> :last-child {
+        width: 30%;
+    }
 
     img {
         width: 3em;
