--- a/src/assets/css/TextDropList.scss
+++ b/src/assets/css/TextDropList.scss
@@ -69,7 +69,7 @@
                 padding: 1em;
             }
 
-            .title .btn {
+            .btn {
                 &.open {
                     display: none;
                 }
