--- a/src/App.scss
+++ b/src/App.scss
@@ -219,6 +219,26 @@ blockquote:after {
     }
 }
 
+.infos {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-bottom: 16px;
+
+    h3 {
+        padding: 0;
+    }
+
+    .info {
+        display: block;
+        width: fit-content;
+        font-size: 16px;
+        background-color: var(--main-2);
+        padding: .5em 1em;
+        border-radius: 2em;
+    }
+}
+
 @media screen and (max-width: 768px) {
     .cols {
         flex-direction: column !important;
