--- a/src/App.scss
+++ b/src/App.scss
@@ -223,6 +223,7 @@ blockquote:after {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    gap: 1em;
     padding-bottom: 16px;
 
     h3 {
@@ -252,5 +253,10 @@ blockquote:after {
         -webkit-columns: 0 1;
         -moz-columns: 0 1;
         columns: 0 1;
+    }
+
+    .infos {
+        flex-direction: column;
+        align-items: normal;
     }
 }
