--- a/src/App.scss
+++ b/src/App.scss
@@ -234,6 +234,11 @@ blockquote:after {
     }
 }
 
+ul.list {
+    padding-top: .75em;
+    padding-left: 1.5em;
+}
+
 @media screen and (max-width: 768px) {
     .cols {
         flex-direction: column !important;
