Add shadow to images

--- a/src/App.scss
+++ b/src/App.scss
@@ -115,6 +115,10 @@ path {
 img {
     border-radius: .5em;
     object-fit: contain;
+
+    &.shadow {
+        box-shadow: 0 0 10px 1px #65656520;
+    }
 }
 
 .separator {
