Transform triangles to react svg images

--- a/src/assets/css/Section.scss
+++ b/src/assets/css/Section.scss
@@ -38,7 +38,7 @@ div.start {
     background-color: var(--main-2);
     height: min-content;
 
-    img {
+    svg {
         width: 100%;
         display: block;
     }
