--- a/src/App.scss
+++ b/src/App.scss
@@ -170,6 +170,18 @@ img {
     }
 }
 
+.section-title {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 1em;
+    padding: 7em 2em 4em 2em;
+
+    h1 {
+        font-size: 3em;
+    }
+}
+
 table {
     width: 100%;
 }
@@ -291,5 +303,13 @@ ul.list {
     .infos {
         flex-direction: column;
         align-items: normal;
+    }
+
+    .section-title {
+        padding: 7em 2em 2em 2em;
+
+        h1 {
+            font-size: 2.5em;
+        }
     }
 }
