--- a/src/assets/css/ImageVideo.scss
+++ b/src/assets/css/ImageVideo.scss
@@ -44,3 +44,11 @@
         }
     }
 }
+
+@media screen and (max-width: 768px) {
+    .svg-container {
+        svg {
+            height: 6em !important;
+        }
+    }
+}
