--- a/src/assets/css/Header.scss
+++ b/src/assets/css/Header.scss
@@ -10,11 +10,11 @@ header {
 
     @keyframes instantColor {
         from {
-            color: var(--main-3);
+            color: var(--main-4);
         }
 
         to {
-            color: var(--main-3);
+            color: var(--main-4);
         }
     }
 
@@ -40,6 +40,10 @@ header {
         .nav-links li:hover .drop-menu {
             top: 3.5em;
         }
+
+        .btn {
+            background-color: var(--main-2);
+        }
     }
 
     &+* {
@@ -52,7 +56,7 @@ header {
         .logo,
         .nav-links>li>a {
             animation: instantColor 1s 1;
-            color: var(--main-3);
+            color: var(--main-4);
         }
 
         .btn.menu-btn {
@@ -63,7 +67,7 @@ header {
             }
 
             path {
-                stroke: var(--main-3);
+                stroke: var(--main-4);
             }
         }
     }
@@ -223,6 +227,7 @@ header {
                 &.close-btn {
                     margin-left: 9.8px;
                     margin-top: 0.75em;
+                    background-color: var(--main-2);
                 }
             }
 
@@ -297,28 +302,6 @@ header {
 
         .logo {
             font-size: x-large;
-        }
-
-        .btn.close-btn {
-            margin-left: 9.8px;
-            margin-top: 0.25em;
-        }
-
-        .nav-links>li {
-            margin-top: 0.25em;
-
-            &>a {
-                font-size: 1em;
-            }
-        }
-
-        .drop-menu li {
-            padding: 0.3em 0;
-
-            a {
-                font-size: 0.9em;
-                line-height: 1.2em;
-            }
         }
     }
 }
