Change color of buttons

--- a/src/assets/css/Header.scss
+++ b/src/assets/css/Header.scss
@@ -179,6 +179,7 @@ header {
         .btn {
             font-size: 20px;
             display: none;
+            background-color: var(--main-3);
         }
     }
 }
