--- a/src/assets/css/Footer.scss
+++ b/src/assets/css/Footer.scss
@@ -7,6 +7,11 @@ footer {
         gap: 2em;
         text-align: center;
 
+        img {
+            max-width: min(300px, 100%);
+            margin-bottom: 2em;
+        }
+
         div {
             background-color: var(--main-3);
             margin-bottom: 2em;
