--- a/src/assets/css/Footer.scss
+++ b/src/assets/css/Footer.scss
@@ -3,20 +3,23 @@ footer {
     background-color: var(--main-2);
 
     .sponsor {
-        columns: 3 300px;
+        display: flex;
         gap: 2em;
-        text-align: center;
+        margin-bottom: 2em;
+        padding: 0 2em;
+        align-items: center;
+        justify-content: space-between;
 
-        img {
-            max-width: min(300px, 100%);
-            margin-bottom: 2em;
-        }
+        a {
+            display: block;
+            max-width: min(12em, 100%);
+            max-height: 6em;
 
-        div {
-            background-color: var(--main-3);
-            margin-bottom: 2em;
-            padding: 3em 2em;
-            border-radius: .5em;
+            img {
+                display: block;
+                max-width: min(12em, 100%);
+                max-height: 6em;
+            }
         }
     }
 
